package puppy.code.strategies;

import puppy.code.Playable;

public interface Interaction {
    void interact(Playable entity);
}
